# 4sem_seminars

auction/: .gitignore
auction/src/: auction.cpp  auction.h  main.cpp
auction_1/: CMakeLists.txt
auction_1/src/: auction.cpp
kr_1/: CMakeLists.txt
kr_1/src/: quest.cpp
metrics/: CMakeLists.txt
metrics/src/: main.cpp  metrics.cpp  metrics.h
metrics_2/src/: metrics.cpp
quest_3/: .gitignore  CMakeLists.txt  Readme.md
quest_3/src/: content.h  main.cpp  quest.cpp  quest.h
